# rokumon

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  README.md  bug1.sh  experiments.txt  notes.md  profile.sh
benches/: perft.rs
game-logs/: bug1.sh  bug1.txt  buggy-fight.txt  games-vs-charles.txt
misc/: bug1.sh  experiments.txt  notes.md  til.md  visualise.sh
misc/game-logs/: bot-loses-as-second-player.txt
rokumon/: Cargo.toml
rokumon/src/: ai.rs  board.rs  card.rs  coord.rs  game.rs  play.rs
rokumon_console_ui/: Cargo.toml
rokumon_console_ui/benches/: perft.rs
rokumon_console_ui/src/: console_ui.rs  main.rs  parsers.rs  perft.rs
rokumon_core/: Cargo.toml
rokumon_core/src/: ai.rs  board.rs  card.rs  game.rs  lib.rs
rokumon_wasm/: Cargo.toml  README.md
rokumon_wasm/src/: lib.rs
src/: ai.rs  board.rs  card.rs  console_ui.rs  coord.rs  game.rs  lib.rs  main.rs  parsers.rs  perft.rs  play.rs  strategy.rs
www/: README.md  index.html  index.js  package-lock.json  package.json
www/public/: index.html  manifest.json
www/src/: fonts.css  game.css  game.js  index.css  index.js  setup.css  setup.js  start.css  start.js
