[package]
name = "rokumon"
version = "0.1.0"
authors = ["Ivan Veselov <veselov@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.7"
itertools = "0.9"
failure = "0.1"
nom = "5"
structopt = "0.3"
rayon = "1.3"
rubot = "0.2"
rustyline = "6.1"

[patch.crates-io]
rubot = { git = "https://github.com/lcnr/rubot" }

# [patch.crates-io]
# rubot = { path = "../rubot" }

[dev-dependencies]
criterion = "0.3"

[profile.release]
debug = true

[[bench]]
name = "perft"
harness = false
