[package]
name = "rokumon"
version = "0.1.0"
authors = ["Ivan Veselov <veselov@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
with_serde = ["serde", "serde_json"]
for_wasm = ["rand/wasm-bindgen", "web-sys"]

[dependencies]
rand = "0.7"
itertools = "0.9"
failure = "0.1"
rubot = "0.2"
cfg-if = "0.1"

serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
web-sys = { version = "0.3", features = ["Window", "Performance"], optional = true }
