[package]
name = "rokumon_console_ui"
version = "0.1.0"
authors = ["Ivan Veselov <veselov@gmail.com>"]
edition = "2018"

[dependencies]
rokumon = { path = "../rokumon" }
rand = "0.7"
itertools = "0.9"
failure = "0.1"
nom = "5"
structopt = "0.3"
rayon = "1.3"
rustyline = "6.1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "perft"
harness = false
