[package]
name = "rokumon_wasm"
version = "0.1.0"
authors = ["Ivan Veselov <veselov@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
rokumon = { path = "../rokumon" }
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1.1", optional = true }

